force-app/main/default/objects/Child__c/Child__c.object-meta.xml
<CustomObject>
    <label>Child</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Child Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Children</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>