force-app/main/default/objects/Child__c/fields/Duplicate_Group__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Group__c</fullName>
    <formula>Name__c &amp; &quot; &quot; &amp; TEXT(Birthday__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duplicate Group</label>
    <type>Text</type>
</CustomField>