force-app/main/default/objects/Child__c/fields/Duplicate_Record__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Duplicate Record</label>
    <type>Checkbox</type>
</CustomField>