force-app/main/default/objects/Child__c/fields/Keytree_Id__c.field-meta.xml
<CustomField>
    <fullName>Keytree_Id__c</fullName>
    <externalId>true</externalId>
    <label>Keytree Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>