force-app/main/default/objects/Child__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <label>Name</label>
    <length>25</length>
    <required>true</required>
    <type>Text</type>
</CustomField>