force-app/main/default/objects/Child__c/fields/YM_ID__c.field-meta.xml
<CustomField>
    <fullName>YM_ID__c</fullName>
    <externalId>true</externalId>
    <label>YM_ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>